# GtsTetris

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build_release.sh  build_windows.bat  shaders  update_engine.sh
resources/: fonts  models  textures
src/: main.cpp
src/ai/: AiComponent.h  AiPlanner.cpp  AiPlanner.h  AiRegistration.h  AiTypes.h  TetrisAiSystem.h
src/components/: GhostBlockComponent.hpp  HeldPieceBlockComponent.hpp  NextPieceBlockComponent.hpp  ScoreDisplayComponent.hpp  TetrisBlockComponent.hpp  TetrisCameraControlComponent.hpp  TetrisInputComponent.hpp  TetrisScoreComponent.hpp
src/helpers/: ActivePieceController.hpp  BoardController.hpp  GameStateController.hpp  GhostController.hpp  HoldController.hpp  PieceQueueController.hpp  SpeedHelper.hpp  TetrisConstants.hpp  TetrisPaths.hpp  TetrisPhysics.hpp  TetrisTimers.hpp
src/scene/: TetrisScene.hpp
src/struct/: ActiveTetromino.hpp  TetrisAction.h  TetrisGrid.hpp  TetrisScoringEvent.hpp  TetrominoShape.cpp  TetrominoShape.hpp  TetrominoType.hpp
src/systems/: TetrisBlockInitSystem.hpp  TetrisCameraControlSystem.hpp  TetrisCameraSystem.hpp  TetrisGameSystem.hpp  TetrisInputSystem.hpp  TetrisScoreSystem.hpp  TetrisVisualSystem.hpp
